# BaziFlowAgent

./: .env.example  .gitignore  BaziFlowAgent.service  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  agent.md  telegramBot.service
apiSamples/: paipan.json  raw_bazi_paipan.json
migrations/: 20260330000001_initial_setup.sql  20260331000000_add_user_bazi.sql
src/: almanac.rs  api_extract.rs  calendar.rs  config.rs  db.rs  dify.rs  handlers.rs  llm_bazi.rs  logger.rs  main.rs  paipan.rs  scheduler.rs  state.rs
webapp/: timepicker.html
