[package]
name = "dify-telegram-bot"
version = "0.1.0"
edition = "2024"
description = "Dify Bazi Telegram Bot - A Telegram bot for Chinese almanac and Bazi analysis"

[dependencies]
# Telegram Bot Framework
teloxide = { version = "0.15", features = ["macros"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# OpenAI API Client
async-openai = "0.26"

# Error Handling
anyhow = "1.0"

# HTTP Webhook Server
axum = "0.7"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "macros", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment Variables
dotenvy = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Scheduled Jobs
tokio-cron-scheduler = "0.15"

# Concurrent HashMap
dashmap = "6"

# UUID for callback data
uuid = { version = "1", features = ["v4"] }